--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,11 @@ spring:
     # 配置指定端口
     port: 6379
 
+project:
+  # 分页查询
+  pageSize: 5
+  # MD5加密的盐
+  salt: shuai
 
 
 
@@ -37,7 +42,12 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 
-
+# 配置 七牛云 密钥
+qiniu:          # 下面需要重新配置
+  accessKey: 1OD1LBpG_wd1bVREehVoqCecNLnUnu_Dm454dU8L
+  secretKey: FxX3fqF3dYppJVmgg0PAXPIpVlMNIOeIoTmoDAw5
+  # 桶：就是七牛云上的空间
+  bucket: shuai-trip
 
 # 微信小程序配置
 weixin:
