--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,20 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!--json工具类-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.19</version>
+        </dependency>
+
+        <!--引入auth0,用于token生成 -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.2.1</version>
+        </dependency>
+
         <!--引入七牛云的依赖-->
         <dependency>
             <groupId>com.qiniu</groupId>
