--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,7 +46,7 @@ qiniu:          # 下面需要重新配置
   accessKey: 1OD1LBpG_wd1bVREehVoqCecNLnUnu_Dm454dU8L
   secretKey: FxX3fqF3dYppJVmgg0PAXPIpVlMNIOeIoTmoDAw5
   # 桶：就是七牛云上的空间
-  bucket: shuai-trip
+  bucket: shuai-shell
 
 ## 微信小程序配置
 #weixin:
