--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <elasticsearch.version>7.16.2</elasticsearch.version>
     </properties>
 
     <dependencies>
@@ -107,6 +108,14 @@
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <!--引入es 上面已经自定义版本7.16.2-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+
+
 
         <!--引入hutool -->
         <dependency>
